# rs-experiments

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/basics/: control_flow.rs  functions.rs  mod.rs  variables.rs
src/collections/: mod.rs
src/error_handling/: mod.rs
src/generics/: mod.rs
src/ownership/: mod.rs
src/traits/: mod.rs
