[package]
name = "rs-experiments"
version = "0.1.0"
edition = "2021"
authors = ["Suraj Aswal <surajaswal29@gmail.com>"]
description = "A modular Rust learning repository with organized examples"
license = "MIT"
repository = "https://github.com/surajaswal29/rs-experiments"
keywords = ["rust", "learning", "examples", "tutorial"]
categories = ["development-tools", "education"]

[dependencies]
# Add dependencies as needed for examples
# serde = { version = "1.0", features = ["derive"] }
# tokio = { version = "1.0", features = ["full"] }
